fix overflowing mobile menu

--- a/blog/wp-content/themes/mlc/_/css/xperience.scss
+++ b/blog/wp-content/themes/mlc/_/css/xperience.scss
@@ -1105,7 +1105,7 @@ body {
         &#top-header {
             padding: 30px 0;
             @media (max-width: 768px) {
-                padding: 20px 15px;
+                padding: 20px 0 15px 15px;
             }
             div.container {
                 @media (max-width: 768px) {
@@ -1216,7 +1216,7 @@ body {
                                 float: right;
                                 padding: 15px;
                                 @media (max-width: 768px) {
-                                    margin-right: -15px;
+                                    margin-right: 0;
                                 }
                                 &:hover {
                                     color: white;
